# rpgGame

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  build-ninja.sh  glad.c  main.c  main.cpp  makefile  vcpkg.json
include/glad/: glad.h
shaders/: triangle.frag  triangle.vert
src/: main.cpp
